# TransientBVD

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: .pre-commit-config.yaml  black.yml  pylint.yml  pylint_score.yml  pypi-publish.yml  tests.yml
docs/source/: conf.py  examples.rst  index.rst  modules.rst  reference.rst  transientbvd.rst  usage.rst
examples/: activation_current_plot_example.py  basic_example.py  basic_open_potential_example.py  basic_predefined_transducer_example.py  deactivation_optimum_resistance_example.py  deactivation_time_example.py  deactivation_time_over_rp_example.py  decay_time_example.py  decay_time_over_rp_example.py  optimum_resistance_example.py  plot_closed_current_example.py  regular_decay_example.py  results_saving_example.py
tests/: test_activation.py  test_closed.py  test_deactivation.py  test_open.py  test_transducer.py  test_utils.py
transientbvd/: __init__.py  activation.py  closed.py  deactivation.py  open.py  transducer.py  utils.py
transientbvd/data/: transducers.json
