[tool.poetry]
name = "transientbvd"
version = "0.1.0"
description = "A Python library for transient response analysis and optimization using the Butterworth-Van Dyke (BVD) equivalent circuit model."
authors = [
    "Jan Helge Döersam <jan_helge.doersam@tu-darmstadt.de>",
    "Sven Suppelt <sven.suppelt@tu-darmstadt.de>",
    "Mario Kupnik <mario.kupnik@tu-darmstadt.de>"
]
maintainers = [
    "Jan Helge Döersam <jan_helge.doersam@tu-darmstadt.de>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jhd-old/TransientBVD"
repository = "https://github.com/jhd-old/TransientBVD"
keywords = ["BVD", "transient response", "rapid", "analysis", "optimization", "Butterworth-Van Dyke", "circuit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
include = ["transientbvd/data/*.json"]


[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.13.3"
scipy = "^1.14.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.3"
pandas = "^2.2.3"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
