[tool.poetry]
name = "transientbvd"
version = "0.2.0"
description = "A Python library for transient response analysis and optimization using the Butterworth-Van Dyke (BVD) equivalent circuit model."
authors = [
    "Jan Helge Döersam <jan_helge.doersam@tu-darmstadt.de>",
    "Sven Suppelt <sven.suppelt@tu-darmstadt.de>"
]
maintainers = [
    "Jan Helge Dörsam <jan_helge.doersam@tu-darmstadt.de>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/TUDA-MUST/TransientBVD"
repository = "https://github.com/TUDA-MUST/TransientBVD"
keywords = ["activation", "BVD", "deactivation", "transient response", "rapid", "analysis", "optimization", "Butterworth-Van Dyke", "circuit", "ultrasound", "transducer", "ultrasonic", "step response", "ring-down"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = ["LICENSE", "transientbvd/data/*.json"]
packages = [{ include = "transientbvd" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sympy = ">=1.14,<2.0"
scipy = ">=1.14,<2.0"
pandas = ">=2.2,<4.0"

[tool.poetry.group.dev.dependencies]
matplotlib = ">=3.9,<4.0"
sphinx = ">=8.1,<9.0"
sphinx-rtd-theme = ">=3.0,<4.0"
pylint = ">=3.3,<4.0"
pytest = ">=8.3,<9.0"
black = ">=25,<26"
pre-commit = ">=4.1,<5.0"
myst-parser = ">=4.0,<5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
